add lots to homepage

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,20 +8,59 @@ title: Gray Bike | Software & Design Consulting
 
     %section.type-system-slab.hero-text
 
-      %h1.fade-up Gray Bike is a small software consultancy based in San Francisco, California. We use technology to help small businesses, nonprofits, and startups grow.
+      %h1.fade-up Gray Bike is a small software consultancy based in San Francisco, California. I use technology to help small businesses, nonprofits, and startups grow.
     
 
       .find-out-more.text-center.fade-in.fade-up-delay
-        %a{href: "#graybike-overview"}
+        %a{href: "#services"}
           = image_tag 'icons/down-arrow-circle-outline.svg', alt: 'Find out more', class: 'outline'
           = image_tag 'icons/down-arrow-circle-filled.svg', alt: 'Find out more', class: 'filled'
 
-  %section.description.type-system-slab
-    %h1.text-center#graybike-overview I work with startups and small businesses.
-    %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
+  .main-content.type-system-slab
+    %section.description
+      %h2.text-center#services Here are some things I can do for you.
 
-    %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle. Pellentesque eget tortor. Sizzle eros. Fusce izzle hizzle dapibizzle stuff tempizzle dizzle. Mauris fo that's the shizzle izzle izzle. Vestibulum izzle tortizzle. Ghetto eleifend rhoncizzle nisi. In hac habitasse platea dictumst. Donec dapibus. Yo tellizzle mammasay mammasa mamma oo sa, pretizzle eu, izzle ac, eleifend vitae, nunc. Bizzle suscipizzle. Integizzle owned velit sed break it down.
+    %section.services
+      .plan
+        %h3 Plan
+        %p
+          Tell me about your project and I'll tell you exactly what it will take to build your project.
+      .build
+        %h3 Build
+        %p
+          I work with companies to develop their products and refine their tech strategy.
+      .visualize
+        %h3 Visualize
+        %p
+          I use design, research and engineering to analyze data and tell stories.
 
-    %p Sizzle metizzle urna, we gonna chung et, shiznit izzle, sollicitudin break yo neck, yall, nulla. Ma nizzle pharetra, yippiyo break it down facilisis dawg, neque justo get down get down velizzle, things fringilla libero break yo neck, yall izzle cool. Uhuh ... yih! dope taciti sociosqu izzle mofo torquent shizzlin dizzle conubia dang, pizzle hymenizzle. Aliquizzle maurizzle orci, scelerisque egizzle, mammasay mammasa mamma oo sa vel, accumsan my shizz, shizzle my nizzle crocodizzle. Bow wow wow lacus. Pizzle shizzlin dizzle bling bling, accumsizzle eu, feugizzle fo shizzle my nizzle, molestie boofron, sapizzle. Curabitur we gonna chung. Away non dawg nizzle away boom shackalack uhuh ... yih!. Integizzle nulla felizzle, cool dope, elementizzle quizzle, mollis nec, ligula. Maecenas dang pede. Fo shizzle nibh. Gangster shizzlin dizzle. Fo blandizzle. Fo shizzle metizzle magna, sempizzle fo shizzle, lobortizzle ut, molestie nizzle, bow wow wow. Morbi mi i'm in the shizzle, sempizzle crackalackin, dapibizzle eu, pretizzle ac, velizzle. shizznit pot quizzle shiz sheezy aliquizzle.
+    %section.work
+      %h2.text-center#work Some of my work
+    %section.company-example.first
+      .company-example__description
+        %h3 Soma Water Website Redesign
+        %p.date.company-example__service-used BUILD
+        %p 
+          I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
+          %span.emphasize we were able to increase sales by 40%
+          in the first 3 months after launch.
+      .company-example__image
+        = image_tag "http://placehold.it/350x150", alt: "Soma Water Website"
+    
+    %section.company-example
+      .company-example__image
+        = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+      .company-example__description
+        %h3 Visualizing Protein Pathways
+        %p.date.company-example__service-used VISUALIZE
+        %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
 
-    %p In fo shizzle my nizzle ligula tellivizzle est. Proin ullamcorpizzle. Etizzle tempor. Own yo' in pimpin' gangster daahng dawg imperdizzle pot. Dizzle rizzle i'm in the shizzle. Sed black izzle da bomb lacus. Boom shackalack a ipsizzle away urna we gonna chung nizzle. Integer nec things. Vivamizzle boom shackalack bling bling hizzle felizzle. Tellivizzle shiz fo shizzle mah nizzle fo rizzle, mah home g-dizzle. Sheezy eu check out this in magna shizznit lobortis. Stuff placerizzle, arcu nizzle euismod porta, nisl est sizzle yo, cursus dizzle mi fo sit amizzle est. Gizzle turpizzle. Vestibulizzle check it out ipsizzle fizzle shiznit faucibus crunk my shizz et ultrices posuere cubilia Curae; Break it down vehicula, check out this laoreet tincidunt hendrerizzle, risus lorem uhuh ... yih! nunc, a crazy you son of a bizzle metizzle quis dizzle. Duis pretizzle gizzle at nulla. Phasellizzle accumsan. Cum sociis natoque pimpin' izzle magnis dizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle montizzle, nascetur break yo neck, yall bizzle. Prizzle shut the shizzle up massa the bizzle quizzle ultrices congue. Mofo nizzle mi.
+    %section.company-example
+      .company-example__description
+        %h3 Hummings
+        %p.date.company-example__service-used DESIGN / BUILD
+        %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+      .company-example__image
+        = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+
+    
