--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -6,9 +6,11 @@
         = succeed "BIKE" do
           %span.dg GRAY
   %nav
-    %a
+    %a{href:"#services"}
+      %span SERVICES
+    %a{href:"#work"}
       %span Work
     %a
       %span Words
-    %a.hire
-      %span Hire
+    %a.contact
+      %span Contact
