--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -28,7 +28,12 @@ $blue: #95ADB3;
 $blue-b1: #C5D0D2;
 $blue-b2: #EFF2F3;
 
+
 $white: #FFFFFF;
+
+
+//Non-blue Colors
+$pastel-brown: #BDCC97;
 
 
 
