--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -10,7 +10,7 @@
     %meta{name:"google-site-verification", content:"mGFqkZIpRsu-KTICkZB_Lk453ig5zwNKhB2WrqWtqTg"}
 
     / Use title if it's in the page YAML frontmatter
-    %title= current_page.data.title || "GRAY BIKE"
+    %title= current_page.data.title || "GRAY BIKE - Software Consulting"
     %link{href:'http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700|Source+Sans+Pro:200,300,400,600', rel:'stylesheet', type:'text/css'}
     = stylesheet_link_tag "all"
     = javascript_include_tag  "all"
