a little better positioning

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,8 +34,13 @@ title: Gray Bike | Software & Design Consulting
         %p
           I use design, research and engineering to analyze data and tell stories.
 
+    %section.cta
+      %p.text-center Interested in working together?
+      .contact.text-center
+        = image_tag "http://placehold.it/350x50", alt: "Soma Water Website"
+
     %section.work
-      %h2.text-center#work Some of my work
+      %h2.text-center#work Here is some of my work.
     %section.company-example.first
       .company-example__description
         %h3 Soma Water Website Redesign
@@ -44,6 +49,7 @@ title: Gray Bike | Software & Design Consulting
           I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
           %span.emphasize we were able to increase sales by 40%
           in the first 3 months after launch.
+          %a.read-more Read More &rsaquo;
       .company-example__image
         = image_tag "http://placehold.it/350x150", alt: "Soma Water Website"
     
@@ -53,13 +59,17 @@ title: Gray Bike | Software & Design Consulting
       .company-example__description
         %h3 Visualizing Protein Pathways
         %p.date.company-example__service-used VISUALIZE
-        %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+        %p
+          Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+          %a.read-more Read More &rsaquo;
 
     %section.company-example
       .company-example__description
         %h3 Hummings
         %p.date.company-example__service-used DESIGN / BUILD
-        %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+        %p
+          Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+          %a.read-more Read More &rsaquo;
       .company-example__image
         = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
 
