--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -7,10 +7,10 @@
           %span.dg GRAY
   %nav
     %a{href:"#services"}
-      %span SERVICES
+      %span About
     %a{href:"#work"}
       %span Work
     %a
       %span Words
-    %a.contact
+    %a.contact{href:'mailto:hello@graybike.co'}
       %span Contact
