--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -38,38 +38,61 @@
       .cta__availability.text-center
         %p.type [ AVAILABLE FROM JANUARY 2016 ]
 
+
+
     %section.work
       %h2.text-center#work Here is some of my work.
-    %section.company-example.first
-      .company-example__description
-        %h3 Soma Water Website Redesign
-        %p.date.company-example__service-used BUILD
-        %p 
-          I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
-          %span.emphasize we were able to increase sales by 40%
-          in the first 3 months after launch.
-          %a.read-more Read More &rsaquo;
-      .company-example__image
-        = image_tag "http://placehold.it/350x150", alt: "Soma Water Website"
+    %section
+      .company-example
+        .company-example__description
+          %h3 Soma Water Website Redesign
+          %p.date.company-example__service-used BUILD
+          %p 
+            I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
+            %span.emphasize we were able to increase sales by 40%
+            in the first 3 months after launch.
+            %a.read-more{href:"#"} Read More &rsaquo;
+        .company-example__image.omega
+          = image_tag "http://placehold.it/350x150", alt: "Soma Water Website"
+        .company-example__testimony
+          %blockquote
+            %p Pavan has been our go-to guy to help with our engineering efforts at drinksoma.com. We came to him for help with a huge redesign of our e-commerce website. He was able to put a new face on our website and vastly improve the capabilities of our platform -- leading to many more sales and happier customers! He has a great ability to take our business problems and solve them with his engineering expertise. We look forward to continuing to work with him!
+            %cite Michael Del Ponte, Founder & CEO at Soma Water
     
-    %section.company-example
-      .company-example__image
-        = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
-      .company-example__description
-        %h3 Visualizing Protein Pathways
-        %p.date.company-example__service-used VISUALIZE
-        %p
-          Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
-          %a.read-more Read More &rsaquo;
+    %section
+      .company-example
+        .company-example__image
+          = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+        .company-example__description.omega
+          %h3 Visualizing Protein Pathways
+          %p.date.company-example__service-used VISUALIZE
+          %p
+            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+            %a.read-more{href:"#"} Read More &rsaquo;
+        .company-example__testimony
+          %blockquote
+            %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
+            %cite Ted Dillon, Managing Producer at Captains of Industry
 
-    %section.company-example
-      .company-example__description
-        %h3 Hummings
-        %p.date.company-example__service-used DESIGN / BUILD
-        %p
-          Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
-          %a.read-more Read More &rsaquo;
-      .company-example__image
-        = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+    %section
+      .company-example
+        .company-example__description
+          %h3 Hummings
+          %p.date.company-example__service-used DESIGN / BUILD
+          %p
+            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+            %a.read-more{href:"#"} Read More &rsaquo;
+        .company-example__image.omega
+          = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+        .company-example__testimony
+          %blockquote
+            %p We started working with Pavan at Gray Bike for our MVP app (www.hellohummings.com) at the wireframe stage. Pavan quickly grasped the vision of our product and provided a great deal of insights to shape our UX, product architecture, and the engineering milestones. He also came up with really smart solutions to leverage existing tools & frameworks to optimize the custom coding work.
+            %p Throughout the project, Pavan was professional, prompt, reliable, and communicated very well. He is very methodical, tested rigorously, and was very smart about figuring out the bugs. He also worked hard to make sure the project delivered on time - we were actually a week early. This was the most enjoyable and "glitch-free" software development experience I've had to-date.
+            %p Our ultimate product was clean, beautiful, and stable. Pavan was more than an engineer. He was an integral part of our product team. We really enjoyed working with him and would happily recommend him to anyone looking for a technical partner for their next project.
+            %cite Katherine Chen, Founder at Hummings
 
     
+    
+
+
+
