better styles and wording

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -24,7 +24,7 @@
       .build
         %h3 Build
         %p
-          I work with companies to develop their products and refine their tech strategy.
+          I'll work with you to develop your existing product, refine your tech strategy, or build it entirely from scratch.
       .visualize
         %h3 Visualize
         %p
@@ -58,21 +58,6 @@
           %blockquote
             %p Pavan has been our go-to guy to help with our engineering efforts at drinksoma.com. We came to him for help with a huge redesign of our e-commerce website. He was able to put a new face on our website and vastly improve the capabilities of our platform -- leading to many more sales and happier customers! He has a great ability to take our business problems and solve them with his engineering expertise. We look forward to continuing to work with him!
             %cite Michael Del Ponte, Founder & CEO at Soma Water
-    
-    %section
-      .company-example
-        .company-example__image
-          = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
-        .company-example__description.omega
-          %h3 Visualizing Protein Pathways
-          %p.date.company-example__service-used VISUALIZE
-          %p
-            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
-            %a.read-more{href:"#"} Read More &rsaquo;
-        .company-example__testimony
-          %blockquote
-            %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
-            %cite Ted Dillon, Managing Producer at Captains of Industry
 
     %section
       .company-example
@@ -91,8 +76,18 @@
             %p Our ultimate product was clean, beautiful, and stable. Pavan was more than an engineer. He was an integral part of our product team. We really enjoyed working with him and would happily recommend him to anyone looking for a technical partner for their next project.
             %cite Katherine Chen, Founder at Hummings
 
-    
-    
-
-
-
+    %section
+      .company-example
+        .company-example__description
+          %h3 Visualizing Protein Pathways
+          %p.date.company-example__service-used VISUALIZE
+          %p
+            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
+            %a.read-more{href:"#"} Read More &rsaquo;
+        .company-example__image.omega
+          = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
+        
+        .company-example__testimony
+          %blockquote
+            %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
+            %cite Ted Dillon, Managing Producer at Captains of Industry
