--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -12,3 +12,4 @@ $large-screen: 900px;
 
 $mobile: new-breakpoint(max-width $medium-screen);
 $tablet: new-breakpoint(max-width $large-screen);
+$greaterthan-tablet: new-breakpoint(min-width $large-screen);
