--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -29,16 +29,8 @@
         %h3 Visualize
         %p
           I use design, research and engineering to analyze data and tell stories.
-
-    %section.cta
-      %p.text-center Interested in working together?
-      .cta__contact.text-center
-        %a{href:'mailto:hello@graybike.co'}
-          = image_tag "http://placehold.it/350x50", alt: "Contact"
-      .cta__availability.text-center
-        %p.type [ AVAILABLE FROM JANUARY 2016 ]
-
-
+    
+    = partial "partials/cta"
 
     %section.work
       %h2.text-center#work Here is some of my work.
@@ -91,3 +83,5 @@
           %blockquote
             %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
             %cite Ted Dillon, Managing Producer at Captains of Industry
+    %section
+      = partial "partials/cta"
