--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -20,11 +20,11 @@
       .plan
         %h3 Plan
         %p
-          Tell me about your project and I'll tell you exactly what it will take to build your project.
+          Tell me all about your project and for a fixed fee I'll tell you exactly what it will take to build your project.
       .build
         %h3 Build
         %p
-          I'll work with you to develop your existing product, refine your tech strategy, or build it entirely from scratch.
+          I'll work with you to develop your existing product, refine your tech strategy, or build a new one entirely from scratch.
       .visualize
         %h3 Visualize
         %p
@@ -38,12 +38,15 @@
       .company-example
         .company-example__description
           %h3 Soma Water Website Redesign
-          %p.date.company-example__service-used BUILD
+          %p.date.company-example__service-used BUILD: ENGINEERING
           %p 
             I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
             %span.emphasize we were able to increase sales by 40%
             in the first 3 months after launch.
-            %a.read-more{href:"#"} Read More &rsaquo;
+            / %a.read-more{href:"#"} Read More &rsaquo;
+          %p
+            %a.read-more{href:"https://www.drinksoma.com/"} VISIT SITE
+            
         .company-example__image.omega
           = image_tag "http://placehold.it/350x150", alt: "Soma Water Website"
         .company-example__testimony
@@ -55,10 +58,13 @@
       .company-example
         .company-example__description
           %h3 Hummings
-          %p.date.company-example__service-used DESIGN / BUILD
+          %p.date.company-example__service-used BUILD: STRATEGY, DESIGN, ENGINEERING
           %p
-            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
-            %a.read-more{href:"#"} Read More &rsaquo;
+            Hummings is a mobile-first personal finance companion app. They came to me with early stage wireframes, and I guided them through UX revisions and product development. Once designs were finalized, I put together a small engineering team to build out the entire app.
+            / %a.read-more{href:"#"} Read More &rsaquo;
+          %p
+            %a.read-more{href:"https://www.hellohummings.com/"} VISIT SITE
+            
         .company-example__image.omega
           = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
         .company-example__testimony
@@ -71,11 +77,14 @@
     %section
       .company-example
         .company-example__description
-          %h3 Visualizing Protein Pathways
-          %p.date.company-example__service-used VISUALIZE
+          %h3 Interactive Protein Pathways
+          %p.date.company-example__service-used VISUALIZE: STRATEGY, ENGINEERING
           %p
-            Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle.
-            %a.read-more{href:"#"} Read More &rsaquo;
+            Cell Signal Technology wanted to build a visualization that provided information on their product catalog, as well as inform the viewer about protein pathways available in the cell. They hired Captains of Industry, who brought me on to build the data viz. I worked closely with design througout and built the entire visualization.
+            / %a.read-more{href:"#"} Read More &rsaquo;
+            %p
+              %a.read-more{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo"} VISIT SITE
+            
         .company-example__image.omega
           = image_tag "http://placehold.it/350x150", alt: "Visualizing Protein Pathways"
         
