--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -18,6 +18,10 @@
 @import "graybike/base/utilities";
 @import "graybike/base/nav";
 
+// Components
+@import "graybike/components/buttons";
+@import "graybike/components/cta";
+
 // Pages
 @import "graybike/misc/fade-up";
 @import "graybike/pages/landing";
