--- a/source/partials/_cta.html.haml
+++ b/source/partials/_cta.html.haml
@@ -1,8 +1,8 @@
 %section.cta
   %p.text-center Interested in working together?
   .cta__contact.text-center
-    %a{href:'mailto:hello@graybike.co'}
-      = image_tag "http://placehold.it/350x50", alt: "Contact"
+    %a.cta__button{href:'mailto:hello@graybike.co', alt: "Get in touch"}
+      .cta__cta-text GET IN TOUCH
   .cta__availability.text-center
     %p.type
       [ AVAILABLE FROM
