--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -75,9 +75,15 @@ article.landing {
         text-align: center;
       }
       background-color: $color;
-      box-shadow: inset 0px 0px 1px 1px darken($color,20%);
+      box-shadow: inset 0px 0px 1px 2px darken($color,20%);
       margin-bottom: padding-blocks(2);
-
+      
+      @include transition(all 0.3s ease-in-out);
+      
+      &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+      }
     }
     .plan {
       @include service-box($pastel-brown);
