--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,6 @@
 %article.landing
   .hero
-    = partial "partials/nav"
+    = partial "partials/nav", locals: { alt: true }
 
     %section.type-system-slab.hero-text
 
