--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -21,7 +21,8 @@
 // Components
 @import "graybike/components/buttons";
 @import "graybike/components/cta";
+@import "graybike/misc/fade-up";
 
 // Pages
-@import "graybike/misc/fade-up";
 @import "graybike/pages/landing";
+@import "graybike/pages/blog";
