--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -37,7 +37,7 @@ header {
     height: 100%;
     font-size: 1.5em;
     font-family: $sans-serif;
-    color: $blue-b2;
+    color: $blue-d2;
     font-weight: 600;
     &:hover {
       color: $blue-b2;
@@ -56,7 +56,7 @@ header {
 
   nav a {
     padding: 0 1em;
-    font-weight: 300;
+    font-weight: 400;
     text-transform: uppercase;
     white-space: nowrap;
     &:last-child {
@@ -78,7 +78,7 @@ header {
 
   // Just center everything for mobile.
   @include media($tablet) {
-    // height: auto;
+    height: auto;
     > div h2 {
       margin-bottom: 1em;
     }
@@ -101,11 +101,11 @@ header {
 
 // Nav link styling
 nav a {
-  color: $blue-b2;
+  color: $action-color;
   &:active,
   &:focus,
   &:hover {
-    color: $blue-b2;
+    color: $action-color;
     cursor: pointer;
   }
 }
@@ -119,7 +119,7 @@ nav a span:after {
   left: 0;
   width: 100%;
   height: 4px;
-  background: $blue-b1;
+  background: $action-color;
   content: '';
   opacity: 0;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -137,4 +137,16 @@ nav a span:focus::after {
   -webkit-transform: translateY(0px);
   -moz-transform: translateY(0px);
   transform: translateY(0px);
+}
+
+header.alt {
+  h2 a {
+    color: $blue-b2;
+  }
+  nav a, nav a:hover {
+    color: $blue-b2;
+  }
+  nav a span:after {
+    background: $blue-b2;
+  }
 }
