--- a/source/stylesheets/graybike/pages/_blog.scss
+++ b/source/stylesheets/graybike/pages/_blog.scss
@@ -1,8 +1,20 @@
 .blog {
-  // margin-top: $navbar-height;
-
-  .articles {
+  .articles, article.post {
     @include span-columns(8);
     @include shift(2);
+
+    @include media($tablet) {
+      @include span-columns(10);      
+      @include shift(1);
+    }
+
+    @include media($mobile) {
+      @include span-columns(12);      
+      @include shift(0);
+    }
+    
+  }
+  .articles article {
+    margin-bottom: padding-blocks(5);
   }
 }
