--- a/source/words/index.html.haml
+++ b/source/words/index.html.haml
@@ -14,18 +14,16 @@ per_page: 10
   - page_articles.each_with_index do |article, i|
     %section.articles
       %article.type-system-slab
-        - if article.try(:type)
-          %p.type= article.type
+        / - if article.data.type
+        /   %p.type= article.data.type
         %h1
           = link_to article.title, article
         %p.date
-          = article.date.strftime('%b %e')
+          = article.date.strftime('%b %e, %Y')
         %p
-          = article.body
-          %a.read-more{:href => "javascript:void(0)"}
-            Read More
-            %span &rsaquo;
-        %hr
+          - if article.data.description
+            = article.data.description
+            = link_to "Read More &rsaquo;", article, class: 'read-more'
       - if paginate && next_page
         %p
           = link_to 'Next page', next_page
