adding about field

--- a/source/stylesheets/graybike/pages/_blog.scss
+++ b/source/stylesheets/graybike/pages/_blog.scss
@@ -1,18 +1,6 @@
 .blog {
   .articles, article.post {
-    @include span-columns(8);
-    @include shift(2);
-
-    @include media($tablet) {
-      @include span-columns(10);      
-      @include shift(1);
-    }
-
-    @include media($mobile) {
-      @include span-columns(12);      
-      @include shift(0);
-    }
-    
+    @include text-width();
   }
   .articles article {
     margin-bottom: padding-blocks(5);
