--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,7 +4,7 @@
 
     %section.type-system-slab.hero-text
 
-      %h1.fade-up Gray Bike is a solo software consultancy based in San Francisco. I use technology to help small businesses, nonprofits, and startups grow.
+      %h1.fade-up Gray Bike is a solo software consultancy based in San Francisco, California. I use technology to solve problems for businesses and non-profits.
     
 
       .find-out-more.text-center.fade-in.fade-up-delay
@@ -22,7 +22,7 @@
   .main-content.type-system-slab
     - if data.features.services
       %section.description
-        %h2.text-center#services Here are some things I can do for you.
+        %h2.text-center#services Here's what I can do for you
 
       / http://zurb.com/building-blocks/header-card-panel
       / ^ Might be good for styles for listing these blocks
@@ -40,6 +40,12 @@
           %p
             I use design, research and engineering to analyze data and tell stories.
       
+      %section.about
+        %p
+          I believe
+          %span communication and collaboration
+          are paramount to the success of any project we work on. I work best with clients that value these same principles, and trust me to provide valuable critique throughout the process. Click on one of my services above to find out more.
+
       = partial "partials/cta"
 
     %section.work
