--- a/source/stylesheets/graybike/helpers/_mixins.scss
+++ b/source/stylesheets/graybike/helpers/_mixins.scss
@@ -3,3 +3,19 @@
   top: 50%;
   @include transform(translateY(-50%));
 }
+
+@mixin text-width() {
+
+  @include span-columns(8);
+  @include shift(2);
+
+  @include media($tablet) {
+    @include span-columns(10);
+    @include shift(1);
+  }
+  
+  @include media($mobile) {
+    @include span-columns(12);
+    @include shift(0);
+  }
+}
